<resources>
    <string name="app_name">Sound board</string>
    <string name="a">A</string>
    <string name="bFlat">B♭</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="f">F</string>
    <string name="dSharp">D#</string>
    <string name="fSharp">F#</string>
    <string name="gSharp">G#</string>
    <string name="cSharp">C#</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="g">G</string>
    <string name="scale">Scale</string>
    <string name="Switch">Switch</string>
</resources>
